Fixed btn hangover in project section on smaller screens

--- a/src/css/projectStyles.scss
+++ b/src/css/projectStyles.scss
@@ -285,9 +285,13 @@
         width: 100%;
     }
 
-    #links a {
-        width: 80px;
-        font-size: .8rem;
+    #links { 
+        gap: 10px;
+
+        a {
+            width: 80px;
+            font-size: .8rem;
+        }
     }
 
     .render-warning {
